@@ -4,11 +4,12 @@ Revision history for Pod-PseudoPod-LaTeX
     - added support for custom environments
     - improved screen handling (Dean Serenevy, Moritz Lenz)
     - support =for latex (Alberto Simões)
-    - render L<> as \url (Alberto Simões)
+    - render L<> and U<> as \url (Alberto Simões)
     - make ligatures removal optional (Alberto Simões)
     - support optional titles for 'screen' (Alberto Simões)
     - support run-time defined environments with optional titles 
       (Alberto Simões)
+    - support superscript G<> and subscript L<>. (Alberto Simões)
 
 1.101600  Wed Jun 9 13:48:24 2010
     - made bin/ppod2latex installable (Jerome Quelin, RT #58269)
